Added Thrive project and made minor copy changes

--- a/projects/glofox.html
+++ b/projects/glofox.html
@@ -42,7 +42,7 @@
                                         <img src="../images/glofox/conor.png">
                                         <div class="text">
                                                 <p id="name">Conor O’Loughlin</p>
-                                                <p id="title">Glofox CEO<span>& Co-Founder</span></p>
+                                                <p id="title">Glofox CEO<span> & Co-Founder</span></p>
                                         </div>
                                 </div>
                         </div>
@@ -231,10 +231,10 @@
 
         <div class="narrow-container no-padding mobile-no-padding">
 
-                <a class="project-nav-container" href ="../projects/webfaction.html">
+                <a class="project-nav-container" href ="../projects/mic.php">
                         <div class="project-nav next-ripple mobile-no-margin" style="margin-top: 0 !important">
                                 <p class="small bold">Next Project</p>
-                                <p class="large">Webfaction</p>
+                                <p class="large">Make It Cheaper</p>
                                 <i class="fas fa-arrow-right"></i>
                         </div>
                 </a>
