--- a/projects/webfaction.html
+++ b/projects/webfaction.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="narrow-container">
-                        <p>Also at this stage, I decided to document the structure of the current interface and that of my proposed interface to make it easy to stay on the right track and ensure every part of the new design is in the right place.</p>
+                <p>Also at this stage, I decided to document the structure of the current interface and that of my proposed interface to make it easy to stay on the right track and ensure every part of the new design is in the right place.</p>
                 </div>
                 <div class="royalSlider" id="wf-rs-02">
                         <div class="royalSlider__images">
@@ -131,7 +131,7 @@
 
         <div class="narrow-container mobile-no-padding"> 
 
-        <a class="full-width-button next-ripple" href="http://stage.hyperion.co/webfaction/" target="_blank">Try the Interface</a>
+        <a class="full-width-button next-ripple" href="https://stage.studio-hyperion.uk/webfaction/" target="_blank">Try the Interface</a>
 
         </div>
 
@@ -146,10 +146,10 @@
                         <span>Providing a good experience on mobile devices</span>
                 </div>
 
-                <a class="project-nav-container" href ="../projects/eq-playbook.html">
+                <a class="project-nav-container" href ="../projects/glofox.html">
                         <div class="project-nav next-ripple">
                                 <p class="small bold">Next Project</p>
-                                <p class="large">EQ Playbook</p>
+                                <p class="large">Glofox</p>
                                 <i class="fas fa-arrow-right"></i>
                         </div>
                 </a>
