--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container" id="header-block">
         <h2>Cristian M.</h2>
         <h3>Product Designer</h3>
-        <p>Hi, I'm Cristian Moisei, a Product (UX+UI) Designer and Consultant from London currently available for new contracts. I was formerly a Senior UX Designer at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="http://www.hyperion.co" target="_blank">Hyperion</a>, for 4 years. I'm comfortable with front-end dev (HTML/CSS/JS) and Swift.</p>
+        <p>Hi, I'm Cristian Moisei, a Product (UX+UI) Consultant from London. I was formerly a Senior UX Designer at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a>, for 4 years. I also design and develop iOS apps in my spare time, two of which were featured by Apple on the App Store.</p>
     
         <div id="info">
             <!-- <p id="location">I'll try to make finding the info you need as easy as possible.</p> -->
@@ -65,13 +65,16 @@
         </div>
     </div>
 
-    <div id="eq-block">
+    <div id="thrive-block">
         <div class="container">
             <div class="text">
-                <h1 class="number">03.</h1>
-                <h1>A psychology app I developed: EQ Playbook</h1>
-                <a href="projects/eq-playbook.html">
-                    <div class="view-project" id="eq-view-project">
+                <div id="featured">
+                    <a href="https://apps.apple.com/us/app/thrive-goals-ideas-decisions/id1472954301?ls=1" target="_blank"><img class="featured" src="images/apple.svg"></a>
+                    <a href="https://www.producthunt.com/posts/thrive-b91dd4e7-5dcd-425b-a78c-227ca7cbfe03" target="_blank"><img class="featured" src="images/product-hunt.svg"></a>
+                </div>
+                <h1>Launching my own iOS app</h1>
+                <a href="projects/thrive.html">
+                    <div class="view-project" id="thrive-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right"></i>
                     </div>
@@ -99,7 +102,7 @@
     <div id="mobile-projects">
         <a href="projects/glofox.html"><img src="images/mobile-glofox.jpg"></a>
         <a href="projects/mic.php"><img src="images/mobile-mic.jpg"></a>
-        <a href="projects/eq-playbook.html"><img src="images/mobile-eq.jpg"></a>
+        <a href="projects/thrive.html"><img src="images/mobile-thrive.jpg"></a>
         <a href="projects/webfaction.html"><img src="images/mobile-webfaction.jpg"></a>
     </div>
 
@@ -108,7 +111,7 @@
         <p>Thanks for stopping by <span>😀</span></p>
         <p class="small">Find more of my work below</p>
         <div id="social">
-            <a class="hyperion-ripple" href="http://www.hyperion.co" target="_blank"><img src="images/footer-hyperion.jpg" alt=""></a>
+            <a class="hyperion-ripple" href="https://www.studio-hyperion.uk" target="_blank"><img src="images/footer-hyperion.jpg" alt=""></a>
             <a class="github-ripple" href="https://github.com/CristianMoisei" target="_blank"><img src="images/footer-github.jpg" alt=""></a>
             <a class="behance-ripple" href="https://www.behance.net/cristianmoisei" target="_blank"><img src="images/footer-behance.jpg" alt=""></a>
             <a class="ph-ripple" href="https://www.producthunt.com/@cristianmoisei/made" target="_blank"><img src="images/footer-ph.jpg" alt=""></a>
@@ -116,7 +119,7 @@
 
         <!-- Only shows up below 640px -->
         <div id="mobile-social">
-            <a style="margin-right: 10px;" href="http://www.hyperion.co" target="_blank"><img src="images/mobile-hyperion.jpg" alt=""></a>
+            <a style="margin-right: 10px;" href="https://studio-hyperion.uk" target="_blank"><img src="images/mobile-hyperion.jpg" alt=""></a>
             <a style="margin-right: 10px;" href="https://github.com/CristianMoisei" target="_blank"><img src="images/mobile-github.jpg" alt=""></a>
             <a style="margin-right: 10px;" href="https://www.behance.net/cristianmoisei" target="_blank"><img src="images/mobile-behance.jpg" alt=""></a>
             <a href="https://www.producthunt.com/@cristianmoisei/made" target="_blank"><img src="images/mobile-ph.jpg" alt=""></a>
