Mobile fixes and copy changes

--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -21,6 +21,8 @@
         <script type="text/javascript" src="../royalslider/jquery.royalslider.min.js"></script>
         <script src="../royalslider/jquery.easing-1.3.js"></script>
         <script src="../royalslider/royal-slider.js"></script>
+
+        <link rel="preload" href="../images/thrive/thrive-01.jpg" as="image">
 </head>
 <body id="thrive">
 
@@ -265,7 +267,7 @@
         <div class="narrow-container">
                 <h4 class="first-h4">Reception</h4>
                 <p>The app has been very well received with people going out of their way to write positive reviews and write me
-                about how much it helped them or suggesting ideas and content.</p>
+                about how much it helped them or suggesting ideas and content. So far it sold <span class="bold">2.4k units.</span></p>
         </div>
 
         <div class="royalSlider">
@@ -370,7 +372,7 @@
                         </div>
                 </a>
                 
-                <a class="continue-navigation" href="../index.html">Return Home</a>
+                <a class="continue-navigation" id="light-background" href="../index.html">Return Home</a>
         </div>
 
 </body>
