Added storyboard image to Thrive project and made minor copy changes

--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -225,9 +225,7 @@
                 <h4 class="first-h4">The video</h4>
                 <p>The promo video was one of the most important pieces of presenting the app to users because it explains the concept in
                 just over 1 minute and is a great alternative for visitors who don’t want to read the website.</p>
-                <p>I’m no motion designer so I used a few templates to make it, but I did write the script and created the [storyboard] and
-                in the end the video was well-received not only because it explains the app pretty easily, but also because it helps
-                cement its identity and gives it a bit of personality.</p>
+                <p>I’m no motion designer so I used a few templates to make it, but I did write the script and created the <a href="../images/thrive/early/storyboard.jpg" target="_blank">storyboard</a> and in the end the video was well-received not only because it explains the app pretty easily, but also because it helps cement its identity and gives it a bit of personality.</p>
         </div>
         <div class="video-top-container">
         <div class="video-inner-container">
@@ -332,7 +330,7 @@
         </div>
 
         <div class="narrow-container">
-                <p>Being completely free, this app has <span class="bold">11.4k</span> downloads at the time of writing and 390 ratings with an average rating of <span class="bold">4.8</span></p>
+                <p>Being completely free, this app has <span class="bold">11.4k</span> downloads at the time of writing and 430 ratings with an average rating of <span class="bold">4.8</span></p>
         </div>
         <div class="project-image" id="thrive-14"></div>
 
