--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container" id="header-block">
         <h2>Cristian M.</h2>
         <h3>Product Designer</h3>
-        <p>Hi, I'm Cristian Moisei, a Product (UX+UI) Consultant from London. I was formerly a Senior UX Designer at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a>, for 4 years. I also design and develop iOS apps in my spare time, two of which were featured by Apple on the App Store.</p>
+        <p>Hi, I'm Cristian Moisei, a Product (UX+UI) Consultant from London. I was formerly a UX Manager at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a>, for 4 years. I also design and develop iOS apps in my spare time, two of which were featured by Apple on the App Store.</p>
     
         <div id="info">
             <!-- <p id="location">I'll try to make finding the info you need as easy as possible.</p> -->
