Refactored CSS for sweep effects and made minor copy changes to Thrive

--- a/index.html
+++ b/index.html
@@ -25,12 +25,9 @@
         <p>Hi, I'm Cristian Moisei, a Product (UX+UI) Consultant from London. I was formerly a UX Manager at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a>, for 4 years. I also design and develop iOS apps in my spare time, two of which were featured by Apple on the App Store.</p>
     
         <div id="info">
-            <!-- <p id="location">I'll try to make finding the info you need as easy as possible.</p> -->
-            <p>
-                <a class="sweep" id="generic-link" href="docs/cristian.pdf" target="_blank">CV</a><span>&#160&#160-&#160&#160</span>
-                <a class="sweep" id="generic-link" href="process.html">Process</a><span>&#160&#160-&#160&#160</span>
-                <a class="sweep" id="generic-link" onclick="showContactDetails()">Contact Details</a>
-            </p>
+            <a class="sweep" href="docs/cristian.pdf" target="_blank">CV</a>
+            <a class="sweep" href="process.html">Process</a>
+            <a class="sweep" onclick="showContactDetails()">Contact Details</a>
         </div>
     </div>
 
@@ -41,7 +38,7 @@
                     <h1 style="color:#3d75d7; opacity: 1;" class="number">01.</h1>
                     <h1>Reinventing Glofox's interface for a complex user base</h1>
                     <a href="projects/glofox.html">
-                        <div class="view-project" id="glofox-view-project">
+                        <div class="view-project sweep" id="glofox-view-project">
                             <span>View Project</span>
                             <i class="fas fa-arrow-right" id="glofox-arrow"></i>
                         </div>
@@ -56,7 +53,7 @@
                 <h1 class="number">02.</h1>
                 <h1>Building MIC's digital experience from scratch</h1>
                 <a href="projects/mic.php">
-                    <div class="view-project" id="webfaction-view-project">
+                    <div class="view-project sweep" id="webfaction-view-project">
                         <i class="fas fa-lock" id="lock"></i>
                         <span>View Project</span>
                     </div>
@@ -74,7 +71,7 @@
                 </div>
                 <h1>Launching my own iOS app</h1>
                 <a href="projects/thrive.html">
-                    <div class="view-project" id="thrive-view-project">
+                    <div class="view-project sweep" id="thrive-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right"></i>
                     </div>
@@ -89,7 +86,7 @@
                 <h1 class="number">04.</h1>
                 <h1>Helping Webfaction attract a less technical audience</h1>
                 <a href="projects/webfaction.html">
-                    <div class="view-project" id="webfaction-view-project">
+                    <div class="view-project sweep" id="webfaction-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right"></i>
                     </div>
