--- a/projects/glofox.html
+++ b/projects/glofox.html
@@ -90,7 +90,7 @@
                 </div>
 
                 <p>A good example of a flow that most users reported as confusing and problematic was booking a member into a class, which was previously done by searching for the member they wanted to book, pressing an icon only book button (no label), being taken to the page where they usually edit their classes and pressing a new book button next to the class they wanted. Users would then be taken back to the dashboard, where a pop-up with the details of the booking would appear. If they got something wrong, they would have to cancel and start over.</p>
-                <p>You can have a look at the <a class="sweep" id="generic-link" target="_blank" href="../images/glofox/old-design.pdf">original design</a> here.</p>
+                <p>You can have a look at the <a class="sweep" target="_blank" href="../images/glofox/old-design.pdf">original design</a> here.</p>
 
 
                 <h4>Exploring Ideas</h4>
@@ -179,7 +179,7 @@
 
         <h4>Aftercare</h4>
 
-        <p>Once we started implementing the interface, I also installed Amplitude and Hotjar so we can track its performance properly and added a <a class="sweep mobile-hide" id="generic-link" onclick="show()">feedback widget</a> <span class="mobile-show">feedback widget</span> I made myself that was triggered after several actions asking users whether they found that easy to do or not.</p>
+        <p>Once we started implementing the interface, I also installed Amplitude and Hotjar so we can track its performance properly and added a <a class="sweep mobile-hide" onclick="show()">feedback widget</a> <span class="mobile-show">feedback widget</span> I made myself that was triggered after several actions asking users whether they found that easy to do or not.</p>
 
         <p>I also continued to refine the interface based on the feedback we received from users. For example, users told us the modals the interface launched with were giving them less space to work with so I switched to the sliding panels you see now. There was also a lot of optimisation work around labels or micro-interactions such as getting some headers to stick to the top when scrolling.</p>
 
