--- a/projects/glofox.html
+++ b/projects/glofox.html
@@ -188,7 +188,7 @@
         
         <div class="narrow-container">
 
-                <h1>Other Glofox projects I worked on</h1>
+                <h1>Other projects I worked on</h1>
 
                 <h4>The Mobile App</h4>
                 <p>The Glofox Member App is a key component of the package and the main way for a studio’s members to check its schedule and book into classes, manage their membership, make purchases and more.</p>
