--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -117,7 +117,7 @@
         <div class="project-image" id="thrive-03"></div>
 
         <div class="narrow-container">
-                <p>Thrive will then show a list of all the goals and how close to achieving them a user is.</p>
+                <p>Thrive will then show a list of all goals and how close to achieving them a user is.</p>
         </div>
 
         <div class="project-image" id="thrive-04"></div>
