Synchronised latest changes

--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -177,7 +177,7 @@
                 discovered some great new libraries and learned the importance of using different branches in GitHub. I also
                 learned the hard way to safely unwrap optionals when the weather API the app uses reached its limit on the free plan because of all
                 the traffic and the app started crashing on launch because of a forcefully unwrapped optional.</p>
-                <p>The app isn’t open source but I'd be happy to share the project.</p>
+                <p>The app isn’t open source but I'd consider sharing the project.</p>
         </div>
         <div class="project-image" id="thrive-10"></div>
 
@@ -320,8 +320,7 @@
                 <p>The first app I ever published is a pretty simple one from a technical standpoint and something that started as a
                 personal project back in 2016 - an attempt to demystify what emotions are and how they work via simple and concise
                 definitions.</p>
-                <p>If I asked you what frustration, curiosity, or trust are, you would likely know the meaning of the words but couldn’t
-                easily define each emotion. I think having a clear and concise definition for each emotion is a good step towards better
+                <p>If I asked you what frustration, curiosity, or trust are, you would likely know the meaning of the words but might not be able to easily define each emotion. I think having a clear and concise definition for each emotion is a good step towards better
                 emotional intelligence.</p>
                 <p>You can get it <a href="https://apps.apple.com/us/app/emotions-dictionary/id1397348512" target="_blank">here</a>.</p>
         </div>
