--- a/process.html
+++ b/process.html
@@ -28,7 +28,7 @@
         <div class="step all-rounded-corners" id="exploratory">
             <h4 id="number">01.</h4>
             <div class="content">
-                <h4>Initial Conversation</h4>
+                <h4>Kickoff</h4>
                 <ul>
                     <li>Agree on the goals of the project and its value to the company</li>
                     <li>Outline our assumptions</li>
