Fixed an image issue for the Glofox project

--- a/projects/glofox.html
+++ b/projects/glofox.html
@@ -214,7 +214,7 @@
 
         <div class="narrow-container">
 
-                <h4>The New Website</h4>
+                <h4>A New Website</h4>
                 <p>Glofox's marketing website needed to convey the right information to the key buyer personas in a concise and appealing way, and the designs below aim to achieve this. It also needed to highlight some of the new features and designs.</p>
 
         </div>
