--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body id="body">
     <div class="container" id="header-block">
         <h2>Hi, I'm Cristian, a UX+UI Designer and Product Consultant from London.</h2>
-        <p>I was formerly a UX Manager at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a> for 4 years. I also design and develop iOS apps in my spare time, two of which were <a class="sweep" onclick="smoothScroll()">featured by Apple on the App Store.</a></p>
+        <p>I'm currently a contractor and was formerly a UX Manager at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a> for 4 years. <br><br> I also design and develop iOS apps in my spare time, two of which were <a class="sweep" onclick="smoothScroll()">featured by Apple on the App Store.</a></p>
     
         <div id="info">
             <a class="sweep" href="docs/cristian.pdf" target="_blank">CV</a>
