Small design and content changes + refactored hover effects and main CSS to be simpler and use SCSS

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <meta name="keywords" content="ux,ui,product,designer,london,cristian,moisei">
     <meta name="author" content="Cristian Moisei">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main/main.css">
     <link rel="stylesheet" href="styles/import-fonts.css">
-    <link rel="stylesheet" href="styles/advanced-hover.css">
+    <link rel="stylesheet" href="styles/hover-effects/hover-effects.css">
     <link rel="stylesheet" href="styles/mobile.css">
+    <link rel="stylesheet" href="styles/modal.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/solid.css" integrity="sha384-TbilV5Lbhlwdyc4RuIV/JhD8NR+BfMrvz4BL5QFa2we1hQu6wvREr3v6XSRfCTRp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
     <script src="scripts/show-contact-details.js"></script>
@@ -24,12 +25,12 @@
 <body id="body">
     <div class="container" id="header-block">
         <h2>Hi, I'm Cristian, a UX+UI Designer and Product Consultant from London.</h2>
-        <p>I'm currently a contractor and was formerly a UX Manager at <a class="sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a> for 4 years. <br><br> I also design and develop iOS apps in my spare time, two of which were <a class="sweep" onclick="smoothScroll()">featured by Apple on the App Store.</a></p>
+        <p>I'm currently a contractor and was formerly a UX Manager at <a class="link-sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="link-sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="link-sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="link-sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a> for 4 years. <br><br> I also design and develop iOS apps in my spare time, two of which were <a class="link-sweep" onclick="smoothScroll()">featured by Apple on the App Store.</a></p>
     
         <div id="info">
-            <a class="sweep" href="docs/cristian.pdf" target="_blank">CV</a>
-            <a class="sweep" href="process.html">Process</a>
-            <a class="sweep" onclick="showContactDetails()">Contact Details</a>
+            <div class="button-sweep" onclick="window.open('docs/cristian.pdf')">CV</div>
+            <div class="button-sweep" onclick="window.location = 'process.html'">Process</div>
+            <div class="button-sweep" onclick="showContactDetails()">Contact Details </div>
         </div>
     </div>
 
@@ -38,10 +39,10 @@
         <div class="container">
             <img src="images/glofox.png">
             <div class="text">
-                <h1 style="color:#6C95E9; opacity: 1;" class="number">Case study #1</h1>
+                <h1 class="number">Key Result: +20 NPS</h1>
                 <h1>Reinventing Glofox's interface for a complex user base</h1>
                 <a href="projects/glofox.html">
-                    <div class="view-project sweep" id="glofox-view-project">
+                    <div class="view-project button-sweep" id="glofox-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right" id="glofox-arrow"></i>
                     </div>
@@ -54,10 +55,10 @@
         <div class="container">
             <img src="images/mic.jpg">
             <div class="text">
-                <h1 class="number">Case study #2</h1>
+                <h1 class="number">Key Result: 9x Conversion</h1>
                 <h1>Building MIC's digital experience from scratch</h1>
                 <a href="projects/mic.php">
-                    <div class="view-project sweep" id="webfaction-view-project">
+                    <div class="view-project button-sweep" id="webfaction-view-project">
                         <i class="fas fa-lock" id="lock"></i>
                         <span>View Project</span>
                     </div>
@@ -73,7 +74,7 @@
                 <a href="images/thrive/thrive-13.jpg" target="_blank"><img class="featured" src="images/apple.svg"></a>
                 <h1>Launching Thrive, my own iOS app</h1>
                 <a href="projects/thrive.html">
-                    <div class="view-project sweep" id="thrive-view-project">
+                    <div class="view-project button-sweep" id="thrive-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right"></i>
                     </div>
@@ -85,10 +86,10 @@
     <div id="webfaction-block">
         <div class="container">
             <div class="text">
-                <h1 class="number">Case study #4</h1>
+                <!-- <h1 class="number">Key Result: </h1> -->
                 <h1>Helping Webfaction attract a less technical audience</h1>
                 <a href="projects/webfaction.html">
-                    <div class="view-project sweep" id="webfaction-view-project">
+                    <div class="view-project button-sweep" id="webfaction-view-project">
                         <span>View Project</span>
                         <i class="fas fa-arrow-right"></i>
                     </div>
