--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -8,10 +8,10 @@
         <meta name="description" content="Use this website to learn more about my work and process.">
         <meta name="author" content="Cristian Moisei">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/main.css">
+        <link rel="stylesheet" href="../styles/main/main.css">
         <link rel="stylesheet" href="../styles/ripple.css">
         <link rel="stylesheet" href="../styles/import-fonts.css">
-        <link rel="stylesheet" href="../styles/advanced-hover.css">
+        <link rel="stylesheet" href="../styles/hover-effects/hover-effects.css">
         <link rel="stylesheet" href="../styles/mobile.css">
         <link rel="stylesheet" href="../styles/projects.css">
         <link rel="stylesheet" href="../royalslider/royalslider.css">
