--- a/process.html
+++ b/process.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Use this website to learn more about my work and process.">
     <meta name="author" content="Cristian Moisei">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main/main.css">
     <link rel="stylesheet" href="styles/process.css">
     <link rel="stylesheet" href="styles/import-fonts.css">
     <link rel="stylesheet" href="styles/mobile.css">
