Replaced emoji with SVG for Windows + other small corrections

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
     <div id="footer">
-        <p>Thanks for stopping by <span>😀</span></p>
+        <p>Thanks for stopping by <img id="emoji" src="images/emoji.svg"></img></p>
         <p class="small">Find more of my work below</p>
         <div id="social">
             <a class="hyperion-ripple" href="https://www.studio-hyperion.uk" target="_blank"><img src="images/footer-hyperion.jpg" alt=""></a>
