--- a/projects/glofox.html
+++ b/projects/glofox.html
@@ -232,7 +232,7 @@
         <div class="narrow-container no-padding mobile-no-padding">
 
                 <a class="project-nav-container" href ="../projects/mic.php">
-                        <div class="project-nav next-ripple mobile-no-margin" style="margin-top: 0 !important">
+                        <div class="project-nav button-sweep mobile-no-margin" style="margin-top: 0 !important">
                                 <p class="small bold">Next Project</p>
                                 <p class="large">Make It Cheaper</p>
                                 <i class="fas fa-arrow-right"></i>
