--- a/projects/thrive.html
+++ b/projects/thrive.html
@@ -343,7 +343,7 @@
                 it served me well in later projects.</p>
 
                 <a class="project-nav-container" href="../projects/webfaction.html">
-                        <div class="project-nav next-ripple-dark" id="light-background">
+                        <div class="project-nav button-sweep" id="light-background">
                                 <p class="small bold">Next Project</p>
                                 <p class="large">Webfaction</p>
                                 <i class="fas fa-arrow-right"></i>
