--- a/projects/webfaction.html
+++ b/projects/webfaction.html
@@ -147,7 +147,7 @@
                 </div>
 
                 <a class="project-nav-container" href ="../projects/glofox.html">
-                        <div class="project-nav next-ripple">
+                        <div class="project-nav button-sweep">
                                 <p class="small bold">Next Project</p>
                                 <p class="large">Glofox</p>
                                 <i class="fas fa-arrow-right"></i>
