--- a/index.html
+++ b/index.html
@@ -112,20 +112,23 @@
         <p>Thanks for stopping by <img id="emoji" src="images/emoji.svg"></img></p>
         <p class="small">Find more of my work below</p>
         <div id="social">
-            <a class="hyperion-ripple" href="https://www.studio-hyperion.uk" target="_blank"><img src="images/footer-hyperion.jpg" alt=""></a>
-            <a class="github-ripple" href="https://github.com/CristianMoisei" target="_blank"><img src="images/footer-github.jpg" alt=""></a>
-            <a class="behance-ripple" href="https://www.behance.net/cristianmoisei" target="_blank"><img src="images/footer-behance.jpg" alt=""></a>
-            <a class="ph-ripple" href="https://www.producthunt.com/@cristianmoisei/made" target="_blank"><img src="images/footer-ph.jpg" alt=""></a>
+            <div class="button-sweep" id="social-hyperion" onclick="window.open('https://www.studio-hyperion.uk')">
+                <img src="images/social-hyperion.svg">
+                <p>Hyperion</p>
+            </div>
+            <div class="button-sweep" id="social-github" onclick="window.open('https://github.com/CristianMoisei')">
+                <img src="images/social-github.svg">
+                <p>GitHub</p>
+            </div>
+            <div class="button-sweep" id="social-behance" onclick="window.open('https://www.behance.net/cristianmoisei')">
+                <img src="images/social-behance.svg">
+                <p>Behance</p>
+            </div>
+            <div class="button-sweep" id="social-ph" onclick="window.open('https://www.producthunt.com/@cristianmoisei/made')">
+                <img src="images/social-ph.svg">
+                <p>Product Hunt</p>
+            </div>
         </div>
-
-        <!-- Only shows up below 640px -->
-        <div id="mobile-social">
-            <a style="margin-right: 10px;" href="https://studio-hyperion.uk" target="_blank"><img src="images/mobile-hyperion.jpg" alt=""></a>
-            <a style="margin-right: 10px;" href="https://github.com/CristianMoisei" target="_blank"><img src="images/mobile-github.jpg" alt=""></a>
-            <a style="margin-right: 10px;" href="https://www.behance.net/cristianmoisei" target="_blank"><img src="images/mobile-behance.jpg" alt=""></a>
-            <a href="https://www.producthunt.com/@cristianmoisei/made" target="_blank"><img src="images/mobile-ph.jpg" alt=""></a>
-        </div>
-
     </div>
 
 
