Added missing hover effects and tweaked copy

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
             <img src="images/mic.jpg">
             <div class="text">
-                <h1 class="number">Key Result: 9x Conversion</h1>
+                <h1 class="number">Key Result: 1% → 9% Conversion</h1>
                 <h1>Building MIC's digital experience from scratch</h1>
                 <a href="projects/mic.php">
                     <div class="view-project button-sweep" id="webfaction-view-project">
