--- a/projects/glofox.html
+++ b/projects/glofox.html
@@ -148,7 +148,7 @@
         <div class="narrow-container" id="no-padding">
 
                 <p>The interface is live for all users at the moment but I cannot provide a demo account. What I can share are the rest of the screens:</p>
-                <a class="full-width-button next-ripple" id="webfaction" href="../images/glofox/glofox-presentation.pdf" target="_blank">See All Designs</a>
+                <a class="full-width-button button-sweep" id="webfaction" href="../images/glofox/glofox-presentation.pdf" target="_blank">See All Designs</a>
         </div>
 
         <div class="narrow-container mobile-no-padding">
