--- a/projects/webfaction.html
+++ b/projects/webfaction.html
@@ -131,7 +131,7 @@
 
         <div class="narrow-container mobile-no-padding"> 
 
-        <a class="full-width-button next-ripple" href="https://stage.studio-hyperion.uk/webfaction/" target="_blank">Try the Interface</a>
+        <a class="full-width-button button-sweep" href="https://stage.studio-hyperion.uk/webfaction/" target="_blank">Try the Interface</a>
 
         </div>
 
