Fixed several Windows and Adblocker issues

--- a/index.html
+++ b/index.html
@@ -109,23 +109,23 @@
 
 
     <div id="footer">
-        <p>Thanks for stopping by <img id="emoji" src="images/emoji.svg"></img></p>
+        <p>Thanks for stopping by <img id="emoji" src="images/emoji.jpg"></img></p>
         <p class="small">Find more of my work below</p>
-        <div id="social">
-            <div class="button-sweep" id="social-hyperion" onclick="window.open('https://www.studio-hyperion.uk')">
-                <img src="images/social-hyperion.svg">
+        <div id="links">
+            <div class="button-sweep" id="hyperion" onclick="window.open('https://www.studio-hyperion.uk')">
+                <img src="images/hyperion.svg">
                 <p>Hyperion</p>
             </div>
-            <div class="button-sweep" id="social-github" onclick="window.open('https://github.com/CristianMoisei')">
-                <img src="images/social-github.svg">
+            <div class="button-sweep" id="github" onclick="window.open('https://github.com/CristianMoisei')">
+                <img src="images/github.svg">
                 <p>GitHub</p>
             </div>
-            <div class="button-sweep" id="social-behance" onclick="window.open('https://www.behance.net/cristianmoisei')">
-                <img src="images/social-behance.svg">
+            <div class="button-sweep" id="behance" onclick="window.open('https://www.behance.net/cristianmoisei')">
+                <img src="images/behance.svg">
                 <p>Behance</p>
             </div>
-            <div class="button-sweep" id="social-ph" onclick="window.open('https://www.producthunt.com/@cristianmoisei/made')">
-                <img src="images/social-ph.svg">
+            <div class="button-sweep" id="ph" onclick="window.open('https://www.producthunt.com/@cristianmoisei/made')">
+                <img src="images/ph.svg">
                 <p>Product Hunt</p>
             </div>
         </div>
