--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p>I'm currently a contractor and was formerly a UX Manager at <a class="link-sweep" id="makeitcheaper-link" href="https://www.makeitcheaper.com" target="_blank">Make It Cheaper</a> and the Lead Product Designer at <a class="link-sweep" id="screencloud-link" href="https://www.screen.cloud" target="_blank">ScreenCloud</a> and <a class="link-sweep" id="glofox-link" href="https://www.glofox.com" target="_blank">Glofox</a>. Before that I ran a design studio called <a class="link-sweep" id="hyperion-link" href="https://studio-hyperion.uk" target="_blank">Hyperion</a> for 4 years. <br><br> I also design and develop iOS apps in my spare time, two of which were <a class="link-sweep" onclick="smoothScroll()">featured by Apple on the App Store.</a></p>
     
         <div id="info">
-            <div class="button-sweep" onclick="window.open('docs/cristian.pdf')">CV</div>
-            <div class="button-sweep" onclick="window.location = 'process.html'">Process</div>
+            <div class="button-sweep"><a href="docs/cristian.pdf" target="_blank">CV</a></div>
+            <div class="button-sweep"><a href="process.html">Process</a></div>
             <div class="button-sweep" onclick="showContactDetails()">Contact Details </div>
         </div>
     </div>
@@ -112,22 +112,22 @@
         <p>Thanks for stopping by <img id="emoji" src="images/emoji.jpg"></img></p>
         <p class="small">Find more of my work below</p>
         <div id="links">
-            <div class="button-sweep" id="hyperion" onclick="window.open('https://www.studio-hyperion.uk')">
+            <a class="button-sweep" id="hyperion" href="https://www.studio-hyperion.uk" target="_blank">
                 <img src="images/hyperion.svg">
                 <p>Hyperion</p>
-            </div>
-            <div class="button-sweep" id="github" onclick="window.open('https://github.com/CristianMoisei')">
+            </a>
+            <a class="button-sweep" id="github" href="https://github.com/CristianMoisei" target="_blank">
                 <img src="images/github.svg">
                 <p>GitHub</p>
-            </div>
-            <div class="button-sweep" id="behance" onclick="window.open('https://www.behance.net/cristianmoisei')">
+            </a>
+            <a class="button-sweep" id="behance" href="https://www.behance.net/cristianmoisei" target="_blank">
                 <img src="images/behance.svg">
                 <p>Behance</p>
-            </div>
-            <div class="button-sweep" id="ph" onclick="window.open('https://www.producthunt.com/@cristianmoisei/made')">
+            </a>
+            <a class="button-sweep" id="ph" href="https://www.producthunt.com/@cristianmoisei/made" target="_blank">
                 <img src="images/ph.svg">
                 <p>Product Hunt</p>
-            </div>
+            </a>
         </div>
     </div>
 
